---
title: Diseño de datos — Sprint 3: punto_medicion y medicion_wifi
---
erDiagram
    plano {
        bigint  id              PK
        bigint  proyecto_id     FK
        varchar nombre
        varchar formato
        double  escala_m_por_px
        integer ancho_px
        integer alto_px
        boolean calibrado
    }

    punto_medicion {
        bigint      id          PK
        bigint      plano_id    FK
        double      coord_x
        double      coord_y
        double      x_m
        double      y_m
        timestamptz ts
        varchar     nota
    }

    medicion_wifi {
        bigint      id              PK
        bigint      punto_id        FK
        varchar     ssid
        varchar     bssid
        smallint    rssi
        smallint    canal
        double      frecuencia_ghz
        varchar     nivel
        int         numero_lectura
        timestamptz recibido_en
    }

    plano          ||--o{ punto_medicion : "contiene (1..N)"
    punto_medicion ||--o{ medicion_wifi  : "tiene (1..N)"
